styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:focus-visible {
    outline-color: rgb(166, 0, 255);
    outline-offset: 3px;
    outline-width: 5px;
    outline-style: double;
}

body {
    width: 100%;
    min-height: 100vh;
    color: #737373;
    font-family: "Inter", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
}

.card {
    width: 320px;
    height: 620px;
    perspective: 600px;
}

.card-inner {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    transition: transform 2s;
    transform-style: preserve-3d;
    position: relative;
    background-image: url(starter-files/assets/background-mobile.png);
}

.card-inner.isFlipped {
    transform: rotateY(180deg);
}

.card-face {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    overflow: hidden;
    border-radius: 15px;
    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

#back-side {
    transform: rotateY(180deg);
}

.card-content {
    width: 100%;
    height: 100%;
    padding: 25px;
}

.header {
    height: 25%;
    display: flex;
    align-items: center;
}

.header-left,
.header-right {
    display: flex;
}

.header-right {
    flex-direction: column;
    justify-content: center;
    display: flex;
    align-items: center;
    width: 200%;
}

.header-left {
    justify-content: center;
    position: relative;
}

h1 {
    font-size: 25px;
}

h1,
h2 {
    color: #B5596D;
}

h2 {
    font-weight: normal;
    letter-spacing: .5px;
    font-size: 15px;
    text-transform: uppercase;
}

h3 {
    font-size: 16px;
    color: #EC879C;
    margin-bottom: 5px;
}

p {
    font-size: 12px;
}

.profile-pic {
    height: 90px;
    border: 4px solid white;
    border-radius: 50%;
}

.logo {
    height: 35px;
    position: absolute;
    bottom: 0;
    right: 0;
}

.social-icons-wrapper {
    margin-top: 10px;
    width: 85%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.social-links {
    border: none;
    height: fit-content;
    background-color: transparent;
}

.social-icons-large {
    height: 30px;
    width: 30px;
    margin-right: 15px;
}

.social-links {
    color: grey;
    text-decoration: none;
    font-size: 14px;
    font-weight: 500;
}

.social-link-containers {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
    justify-content: flex-end;
    height: 50px;
    padding: 10px;
}

.social-link-containers:hover,
.social-link-containers:focus,
.social-link-containers:active,
.design-container:hover,
.design-container:focus,
.design-container:active {
    background-color: #FFF9F3;
}

.social-icons {
    height: 25px;
    width: 25px;
}

.content-box {
    background-color: #FFFFFF;
    border-radius: 5px;
    height: 75%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px;
}

.design-container {
    display: flex;
    padding: 5px;
    align-items: center;
    height: 30%;
}

.design-container-text {
    margin-left: 15px;
}

.floral-designs {
    height: 100px;
    width: auto;
}

#qr-container {
    background-color: #F3F3F3;
    border-radius: 10px;
    padding: 10px;
    display: flex;
    align-items: center;
    height: 30%;
    font-size: 12px;
}

#qr-code {
    height: 100px;
    width: 100px;
    margin-right: 10px;
}

#qr-container p {
    font-size: 12px;
}

#qr-container p:first-of-type {
    margin-bottom: 15px;
}

.flip-btn {
    border-radius: 10px;
    background-color: #CA6D81;
    border: none;
    z-index: 1;
    position: absolute;
    bottom: 10px;
    right: 15px;
    height: 50px;
    width: 50px;
    cursor: pointer;
}

.flip-icon {
    z-index: 2;
    position: absolute;
    bottom: 12px;
    right: 12px;
}

